<resources>
    <string name="app_name">3金牌助理</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="unfill">未填写</string>
    <string name="unselect">未选择</string>
    <string name="uninput">未输入</string>
    <string name="canblank">可留空</string>
    <string name="unshow">不显示</string>
    <string name="show">显示</string>
    <string name="need">需要</string>
    <string name="unneed">不需要</string>
    <string name="publish">发布</string>
    <string name="pass">通过</string>
    <string name="refused">拒绝</string>
    <string name="no_net_tip">网络连接失败，请确认网络连接</string>
    <string name="format_error">格式不正确</string>
    <string name="action_failed">操作失败</string>
    <string name="refresh">刷新</string>
    <string name="modify">修改</string>
    <string name="shelves">下架</string>
    <string name="expedited">加急</string>
    <string name="business">商家</string>
    <string name="activity_group">活动群</string>
    <string name="gold_assistant">金牌助理</string>
    <string name="share">分享</string>
    <string name="none">无</string>
    <string name="hiring">招人</string>
    <string name="mine">我</string>
    <string name="message">消息</string>
    <string name="kefu">kefu</string>
    <string name="caiwu">caiwu</string>
    <string name="dingyue">dingyue</string>
    <string name="kefu_value">兼职达人客服</string>
    <string name="caiwu_value">财务小助手</string>
    <string name="dingyue_value">活动小助手</string>
    <string name="recruit_part_time">招兼职</string>
    <string name="regist_regist">注册</string>
    <string name="regist_sendcode">发送验证码</string>
    <string name="regist_getcode_fail">获取验证码失败</string>
    <string name="regist_login_fail">登陆失败</string>
    <string name="regist_regist_fail">注册失败</string>
    <string name="regist_regist_success">注册成功</string>
    <string name="regist_login_pwd_error">登陆密码不正确</string>
    <string name="regist_not_regist_user">该手机号尚未注册用户版。</string>
    <string name="regist_not_regist_company">该手机号尚未注册商家版。</string>
    <string name="regist_request_server_fail">请求服务器失败</string>
    <string name="regist_islogin">正在登录</string>
    <string name="regist_getunreadinfor">正在获取未读信息列表</string>
    <string name="regist_edt_right_tel">请输入正确的手机号码</string>
    <string name="regist_login_now">现在就去登录吧</string>
    <string name="regist_has_registed">该号码已经注册过</string>
    <string name="regist_net_bad">你的网络不够给力，再试一次吧！</string>
    <string name="regist_code_error">验证码错误</string>
    <string name="regist_name_not_hefa">姓名必须为2-15个字或者字母</string>
    <string name="regist_name_not_same">两次输入的密码不相同</string>
    <string name="regist_pwd_not_below_six">密码不能少于6个字符</string>
    <string name="regist_confirm_shengming">请先同意声明</string>
    <string name="regist_tel_change_get_code">手机号码改变请重新获取验证码</string>
    <string name="regist_wait">等待</string>
    <string name="regist_second">秒</string>
    <string name="tixian_tips">请选择您的提现收款方式</string>
    <string name="wallet_youqing_tips">友情提示：为保证财产安全，提现收款人必须和实名认证名相同；提现一般在2个工作日内到账，请注意查看账户余额。如有任何问题，请联系客服。</string>
    <string name="wallet_zfb_tt_tips">提现至支付宝收取每笔0.15%服务费（最低2元/笔，最高25元/笔）</string>
    <string name="wallet_bank_tt_tips">提现至银行卡收取每笔0.20%服务费（最低2元/笔，最高25元/笔）</string>
    <string name="wallet_no_realname">您尚未完成实名认证,请先完成实名认证^_^</string>
    <string name="wallet_account_no_vertify">请输入您的正确有效帐号,确保能正常提现。</string>
    <string name="wallet_money_no_input">请输入正确的提现金额。</string>
    <string name="wallet_money_not_availible">余额不足,不能提现。</string>
    <string name="wallet_bank_not_availible">请输入正确的银行信息</string>
    <string name="wallet_bank_card_not_availible">请输入正确的银行卡信息</string>
    <string name="wallet_bank_zhihang_not_availible">请输入正确的支行信息</string>
    <string name="wallet_net_error">网络异常,获取数据失败</string>
    <string name="wallet_account_error">帐号异常,提交数据失败</string>
    <string name="wallet_idcard_error">密码错误</string>
    <string name="wallet_submit_success">订单提交成功</string>
    <string name="wait_please">正在加载.....</string>
    <string name="listLoadingError">加载失败</string>
    <string name="listLoadingDataEmpty">空空如也</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_nomoredata">没有更多数据</string>
    <string name="backTip">退出提示</string>
    <string name="backMessage">是否确定退出兼职达人?</string>
    <string name="LogoutMessage">是否确定登入?</string>
    <string name="yesExit">退出</string>
    <string name="noExit">取消</string>
    <string name="quanzi">圈子</string>
    <string name="pull_to_refresh_pull_label">拉动刷新…</string>
    <string name="pull_to_refresh_release_label">松开，开始加载…</string>
    <string name="pull_to_refresh_refreshing_label">正在加载…</string>
    <string name="group_notice">群通知</string>
    <string name="content_text_count">%1$s/%2$s</string>
    <string name="activity_management">活动管理</string>
    <string name="call_customer_service">致电客服</string>
    <string name="parttime_scchool">兼职学堂</string>
    <string name="group_notice_function_declare">群通知是XXX的功能</string>
    <string name="group_notice_max_count_tip">限制输入数为%1$d</string>
    <string name="group_notice_hint">请在此输入您想让群成员看到的通知</string>
    <string name="group_member">群成员</string>
    <string name="group_member_number">(%1$s)</string>
    <string name="reputation_value">信誉值</string>
    <string name="admitted_pending_tip">已录取%1$d人/待处理%2$d人</string>
    <string name="admitted_pending_finished_tip">已评价%1$d人/待评价%2$d人</string>
    <string name="already_resume">已录取</string>
    <string name="unresume">待处理</string>
    <string name="commented">已评价</string>
    <string name="uncomment">未评价</string>
    <string name="resume">录取</string>
    <string name="go_comment">去评价</string>
    <string name="cancel_resume">取消录取</string>
    <string name="group_setting_batch">批量管理</string>
    <string name="no_money">未交诚意金/</string>
    <string name="had_money">已交诚意金</string>
    <string name="no_certification">未实名认证</string>
    <string name="submit_certification">已提交认证</string>
    <string name="had_certification">已实名认证</string>
    <string name="reject_certification">认证不通过</string>
    <string name="cacel_resume_or_not">确认录用</string>
    <string name="cacel_resume_or_not_and_remove_from_group">确认取消录用，取消后该用户将被移除聊天群组</string>
    <string name="reject_one_resume_or_not_and_remove_from_group">确认拒绝，拒绝后该用户将被移除聊天群组</string>
    <string name="reject_resume_or_not_and_remove_from_group">确认拒绝他们，拒绝后他们将被移除聊天群组</string>
    <string name="group_setting_send_email">发送已录取人员名单至您的邮箱</string>
    <string name="send_approve_username_to_email">发送已录取人员名单</string>
    <string name="your_email">您的电子邮箱</string>
    <string name="enter_email">请在此输入您的邮箱地址</string>
    <string name="already_send_to_email">已发送您的邮箱，请查收</string>
    <string name="send_to_email_failed">发送失败，请重试</string>
    <string name="group_setting">群设置</string>
    <string name="group_top">群置顶</string>
    <string name="group_msg_undisturb">消息免打扰</string>
    <string name="group_not_allow_send_msg">禁言管理</string>
    <string name="group_cancel_gag">取消禁言</string>
    <string name="pls_check_first">请先选择</string>
    <string name="update_success">更新成功</string>
    <string name="check_all">全选</string>
    <string name="create_new_group">创建群</string>
    <string name="choose_member">选择成员</string>
    <string name="create_group">创建</string>
    <string name="public_count">官方账号</string>
    <string name="group_chat">群聊</string>
    <string name="apply_notify">申请与通知</string>
    <string name="new_group">创建小组群</string>
    <string name="name_of_group">群名称</string>
    <string name="please_enter_name_of_group">请输入群名称</string>
    <string name="notification_of_group">群公告（选填）</string>
    <string name="tips_of_notificaion_of_group">请在此输入您想让群成员收到的通告</string>
    <string name="pick_members_of_group">选择群成员</string>
    <string name="title_activity_group_update_remark">""</string>
    <string name="forbidden_talk">禁言</string>
    <string name="cancel_forbidden_talk">取消禁言</string>
    <string name="update_group_notice">修改群备注</string>
    <string name="more">更多</string>
    <string name="user_detail">用户详情</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="picture_num">共%1$s张</string>
    <string name="reputation">信誉</string>
    <string name="education">学历</string>
    <string name="height">身高</string>
    <string name="other">其他</string>
    <string name="three_dimensional">三维</string>
    <string name="appraise">评价</string>
    <string name="expend">展开</string>
    <string name="call">打电话</string>
    <string name="send_msg">发私信</string>
    <string name="user_performance">该用户表现如何?</string>
    <string name="appraise_detail">评价详情</string>
    <string name="send_add_friend">发送好友申请</string>
    <string name="to_msg">发起会话</string>
    <string name="delete_friend">删除好友</string>
    <string name="summary">简介</string>
    <string name="comment_excellent">优秀</string>
    <string name="comment_good">良好</string>
    <string name="comment_bad">差评</string>
    <string name="original_phone_number">原手机号码</string>
    <string name="login_pwd">登录密码</string>
    <string name="new_phone_number">新手机号</string>
    <string name="validation_code">验证码</string>
    <string name="get_validation_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="failed_to_get_validation_code">无法获取验证码？</string>
    <string name="agree_to">我已阅读并同意《用户协议》</string>
    <string name="real_name">真实姓名</string>
    <string name="password">密码</string>
    <string name="real_name_contributes">用真名能提高被录取的机率哦~</string>
    <string name="pwd_range_from_6_10_digit">要输入6-10位密码哦~</string>
    <string name="publish_job">发布兼职</string>
    <string name="manage_job">管理兼职</string>
    <string name="job_plaza">兼职广场</string>
    <string name="broker_charts">经纪人排行榜</string>
    <string name="publish_tip_about_publish">*请发布真实活动。\n若遭到用户投诉，我们可能会做封号处理。</string>
    <string name="publish_job_label_job_title">兼职标题</string>
    <string name="publish_job_label_begin_time">开始时间</string>
    <string name="publish_job_label_end_time">结束时间</string>
    <string name="publish_job_label_pay_type">结算方式</string>
    <string name="publish_job_label_work_area">工作区域</string>
    <string name="publish_job_label_work_address">详细地点</string>
    <string name="publish_job_label_salary">工资薪酬</string>
    <string name="publish_job_label_sex">指定性别</string>
    <string name="publish_job_label_work_require">工作要求和内容</string>
    <string name="publish_job_label_more_require">更多要求（语言、身材、健康证）</string>
    <string name="publish_job_label_health_book">健康证</string>
    <string name="publish_job_label_language">擅长语言（可多选）</string>
    <string name="publish_job_label_height">身高</string>
    <string name="publish_job_label_measurements">三围</string>
    <string name="publish_job_hint_work_address">请输入4到20字详细地点</string>
    <string name="publish_job_hint_salary_unit">请输入薪酬单位</string>
    <string name="publish_job_hint_work_require">请输入10到1000字的工作内容和要求</string>
    <string name="publish_job_hint_is_show_tel">是否显示您的手机号</string>
    <string name="publish_job_checkbox_sex_unlimited">不限性别</string>
    <string name="publish_job_checkbox_sex_limited">分招男女</string>
    <string name="publish_job_label_male_num">男生人数</string>
    <string name="publish_job_label_female_num">女生人数</string>
    <string name="publish_job_tip_work_require">%1$d/1000</string>
    <string name="job_expedited_label_reason">你遇到了哪种情况？</string>
    <string name="job_expedited_reason_1">人员变动，我要补招</string>
    <string name="job_expedited_reason_2">人招少了，我要扩招</string>
    <string name="job_expedited_tip">加急招人是兼职大人为XX情况提供的XX服务\n第一次不要钱后面每次XX元\n它的作用是XX</string>
</resources>