<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_0"
    android:orientation="vertical">

    <include layout="@layout/activity_common_head" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 兼职标题 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_job_title" />

            <ImageView style="@style/PublicLineH" />

            <EditText
                android:id="@+id/edittxt_job_title"
                style="@style/FormInput"
                android:layout_height="match_parent"
                android:hint="@string/uninput" />

            <ImageView style="@style/PublicLineH" />

            <!-- 开始时间 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_begin_time" />

            <ImageView style="@style/PublicLineH" />

            <TextView
                android:id="@+id/txt_begin_time"
                style="@style/FormSelect"
                android:hint="@string/unselect" />

            <ImageView style="@style/PublicLineH" />

            <!-- 结束时间 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_end_time" />

            <ImageView style="@style/PublicLineH" />

            <TextView
                android:id="@+id/txt_end_time"
                style="@style/FormSelect"
                android:hint="@string/unselect" />

            <ImageView style="@style/PublicLineH" />

            <!-- 结算方式 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_pay_type" />

            <ImageView style="@style/PublicLineH" />

            <TextView
                android:id="@+id/txt_pay_type"
                style="@style/FormSelect"
                android:hint="@string/unselect" />

            <ImageView style="@style/PublicLineH" />

            <!-- 工作区域 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_work_area" />

            <ImageView style="@style/PublicLineH" />

            <TextView
                android:id="@+id/txt_work_area"
                style="@style/FormSelect"
                android:hint="@string/unselect" />

            <ImageView style="@style/PublicLineH" />

            <!-- 详细地点 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_work_address" />

            <ImageView style="@style/PublicLineH" />

            <EditText
                android:id="@+id/edittxt_work_address"
                style="@style/FormInput"
                android:hint="@string/publish_job_hint_work_address" />

            <ImageView style="@style/PublicLineH" />

            <!-- 工资薪酬 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_salary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edittxt_salary"
                    style="@style/FormInput"
                    android:layout_weight="1"
                    android:hint="@string/uninput"
                    android:inputType="numberDecimal" />

                <ImageView style="@style/PublicLineV" />

                <TextView
                    android:id="@+id/txt_salary_unit"
                    style="@style/FormSelect"
                    android:layout_weight="1"
                    android:hint="@string/publish_job_hint_salary_unit" />

            </LinearLayout>

            <ImageView style="@style/PublicLineH" />

            <!-- 指定性别 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_sex" />

            <ImageView style="@style/PublicLineH" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_sex_unlimited"
                    style="@style/FormCheckbox"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/publish_job_checkbox_sex_unlimited" />

                <ImageView style="@style/PublicLineV" />

                <RadioButton
                    android:id="@+id/radio_sex_limited"
                    style="@style/FormCheckbox"
                    android:layout_weight="1"
                    android:text="@string/publish_job_checkbox_sex_limited" />

            </RadioGroup>


            <ImageView style="@style/PublicLineH" />

            <!-- 性别选择  -->
            <LinearLayout
                android:id="@+id/ll_sex_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FormLabel"
                        android:layout_weight="1"
                        android:text="@string/publish_job_label_male_num" />

                    <TextView
                        style="@style/FormLabel"
                        android:layout_weight="1"
                        android:text="@string/publish_job_label_female_num" />

                </LinearLayout>

                <ImageView style="@style/PublicLineH" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edittxt_male_num"
                        style="@style/FormInput"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/canblank"
                        android:inputType="number" />

                    <ImageView style="@style/PublicLineV" />

                    <EditText
                        android:id="@+id/edittxt_female_num"
                        style="@style/FormInput"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/canblank"
                        android:inputType="number" />

                </LinearLayout>

                <ImageView style="@style/PublicLineH" />
            </LinearLayout>

            <!-- 工作要求和内容 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_label_work_require" />

            <ImageView style="@style/PublicLineH_1" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittxt_work_require_content"
                    style="@style/FormInput_S"
                    android:hint="@string/publish_job_hint_work_require"
                    android:maxLength="@integer/work_require_max_length" />

                <TextView
                    android:id="@+id/edittxt_work_require_tip"
                    style="@style/FormInput_S_Tip"
                    android:text="@string/publish_job_tip_work_require" />
            </FrameLayout>

            <ImageView style="@style/PublicLineH_1" />

            <!-- 是否显示您的手机号 -->
            <TextView
                style="@style/FormLabel"
                android:text="@string/publish_job_hint_is_show_tel" />

            <ImageView style="@style/PublicLineH" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_unshow_tel"
                    style="@style/FormCheckbox"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/unshow" />

                <ImageView style="@style/PublicLineV" />

                <RadioButton
                    android:id="@+id/radio_show_tel"
                    style="@style/FormCheckbox"
                    android:layout_weight="1"
                    android:text="@string/show" />

            </RadioGroup>

            <ImageView style="@style/PublicLineH" />

            <View style="@style/FormDivider" />

            <ImageView style="@style/PublicLineH_1" />

            <!-- 更多要求 -->
            <TextView
                android:id="@+id/txt_more_require"
                style="@style/FormInput"
                android:drawableRight="@drawable/other_btn_on"
                android:text="@string/publish_job_label_more_require" />

            <ImageView style="@style/PublicLineH_1" />

            <LinearLayout
                android:id="@+id/ll_more_require_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- 健康证 -->
                <TextView
                    style="@style/FormLabel"

                    android:text="@string/publish_job_label_health_book" />

                <ImageView style="@style/PublicLineH" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_need_health_prove"
                        style="@style/FormCheckbox"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/need" />

                    <ImageView style="@style/PublicLineV" />

                    <RadioButton
                        android:id="@+id/radio_unneed_health_prove"
                        style="@style/FormCheckbox"
                        android:layout_weight="1"
                        android:text="@string/unneed" />

                </RadioGroup>

                <ImageView style="@style/PublicLineH" />

                <!-- 擅长语言 -->
                <TextView
                    style="@style/FormLabel"
                    android:text="@string/publish_job_label_language" />

                <ImageView style="@style/PublicLineH" />

                <TextView
                    android:id="@+id/txt_language"
                    style="@style/FormSelect"
                    android:hint="@string/unselect" />

                <ImageView style="@style/PublicLineH" />

                <!-- 身高 -->
                <TextView
                    style="@style/FormLabel"
                    android:text="@string/publish_job_label_height" />

                <ImageView style="@style/PublicLineH" />

                <TextView
                    android:id="@+id/txt_height"
                    style="@style/FormSelect"
                    android:hint="@string/unselect" />

                <ImageView style="@style/PublicLineH" />

                <!-- 三围 -->
                <TextView
                    style="@style/FormLabel"
                    android:text="@string/publish_job_label_measurements" />

                <ImageView style="@style/PublicLineH" />

                <TextView
                    android:id="@+id/txt_measurements"
                    style="@style/FormSelect"
                    android:hint="@string/unselect" />

                <ImageView style="@style/PublicLineH" />

            </LinearLayout>

            <View style="@style/FormDivider" />

            <Button
                android:id="@+id/btn_publish"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_form_button"
                android:text="@string/publish"
                android:textColor="@color/white" />

            <View style="@style/FormDivider" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>