<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title"/>

    <TextView
        style="@style/FormTitle"
        android:text="@string/real_name"/>
    <com.parttime.widget.EditItem
        android:id="@+id/ei_real_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:background="@color/white"
        app:ei_hint="@string/real_name_contributes"
        app:ei_nameShow="false" />


    <TextView
        style="@style/FormTitle"
        android:text="@string/password"/>

    <com.parttime.widget.EditItem
        android:id="@+id/ei_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:background="@color/white"
        app:ei_hint="@string/pwd_range_from_6_10_digit"
        app:ei_nameShow="false"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/button_margin">
        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_plain_checkbox"/>
        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cb_agree"
            android:layout_marginLeft="12dp"
            android:textSize="15sp"
            android:text="@string/agree_to"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/CommonButton.Blue"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/next_step" />


</LinearLayout>