<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/activity_common_head" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/job_expedited_label_reason"
        android:textColor="@color/c_979797"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_move_up"
        style="@style/CommonButton.Red"
        android:layout_marginTop="9dp"
        android:onClick="moveUp"
        android:text="@string/job_expedited_reason_1" />

    <Button
        android:id="@+id/btn_expansion"
        style="@style/CommonButton.Orange"
        android:layout_marginTop="9dp"
        android:onClick="expansion"
        android:text="@string/job_expedited_reason_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:gravity="center_horizontal"
        android:text="@string/job_expedited_tip"
        android:textColor="@color/c_979797"
        android:textSize="13sp" />

</LinearLayout>