<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_guangchang" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="11dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/login_logo" />

            <Button
                android:id="@+id/btn_publish_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/publish_job" />

            <Button
                android:id="@+id/btn_manage_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/manage_job" />

            <Button
                android:id="@+id/btn_job_plaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/job_plaza" />

            <Button
                android:id="@+id/btn_broker_charts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/broker_charts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/publish_tip_about_publish" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
